<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mail_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/reg_top_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/reg_email_regis"
                android:textColor="@color/white_txt_"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_mail_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#00000000"
                android:ems="10"
                android:hint="@string/reg_email_regis_hint"
                android:inputType="textEmailAddress"
                android:textSize="13sp" />

            <requestFocus
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/reg_et_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/reg_pass"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_email_passwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#00000000"
                android:ems="10"
                android:hint="@string/reg_pass_hint"
                android:inputType="textPassword"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/reg_et_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/reg_re_pass"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_email_surepasswd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:ems="10"
                android:hint="@string/reg_re_pass_hint"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:password="true"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/reg_et_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/reg_re_name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_register_name_mail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:ems="10"
                android:hint="@string/reg_re_name_hint"
                android:inputType="textPersonName"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="13sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:background="@drawable/reg_et_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="性别"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_phone_man"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/d_reg_m"
                    android:button="@null"
                    android:checked="true"
                    android:tag="1" />

                <RadioButton
                    android:id="@+id/rb_phone_woman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/d_reg_w"
                    android:button="@null"
                    android:tag="2" />
            </RadioGroup>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:background="@drawable/reg_buttom_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:gravity="center_vertical"
                android:text="@string/reg_re_isorno"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/sw_phone_nomyself"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/swtich_no_selector"
                    android:button="@null"
                    android:tag="2" />

                <RadioButton
                    android:id="@+id/sw_phone_ismyself"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/swtich_yes_bg_selector"
                    android:button="@null"
                    android:checked="true"
                    android:tag="1" />

            </RadioGroup>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cb_agreement_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/check_bg_selector"
                    android:checked="true"
                    android:button="@null"
                    android:textColor="@color/white_txt_" />

                <ImageButton
                    android:id="@+id/ib_agreement_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/agreement" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <ImageButton
                        android:id="@+id/ibBtnMailRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/register_button" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/reigter_txt"
                        android:textColor="@color/white_txt"
                        android:textSize="24sp" />
                </RelativeLayout>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>